Add Graph structure and display a simple graph